fixed broken links in lecture 1.1

--- a/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
@@ -39,7 +39,7 @@ knitr::include_graphics("images/week1/horst-eco-r4ds.png")
 ```
 
 :::{.gray-text .body-text-s .center-text}
-*Artwork by [Allison Horst](https://allisonhorst.com/)*
+*Artwork by [Allison Horst](https://allisonhorst.com/){target="_blank"}*
 :::
 
 ---
@@ -97,7 +97,7 @@ knitr::include_graphics("images/week1/sam.png")
 ::: {.center-text}
 [**Sam Csik**]{.teal-text}  
 **Email:** [scsik@ucsb.edu](mailto::scsik@ucsb.edu)  
-**Learn more:** [samanthacsik.github.io](https://samanthacsik.github.io/)  
+**Learn more:** [samanthacsik.github.io](https://samanthacsik.github.io/){target="_blank"}
 **Student hours:** TBD @ Bren
 :::
 
@@ -195,19 +195,19 @@ countdown::countdown(
 <br>
 <br>
 
-**Course Conduct:** We are committed to actively creating, modeling, and maintaining an inclusive climate and supportive learning environment for all -- *harassment of any kind will not be tolerated*. Everyone is expected read and adhere to the [Bren School Code of Conduct](https://www.google.com/url?q=https://bren.ucsb.edu/media/4038/download&sa=D&source=docs&ust=1698267517247684&usg=AOvVaw2_0-cWvrj_Z5vPbg7muDIy) and the [UCSB Code of Conduct](https://www.sa.ucsb.edu/docs/default-source/default-document-library/conduct-code-fall-2020_final.pdf?sfvrsn=fada724f_0)
+**Course Conduct:** We are committed to actively creating, modeling, and maintaining an inclusive climate and supportive learning environment for all -- *harassment of any kind will not be tolerated*. Everyone is expected read and adhere to the [Bren School Code of Conduct](https://bren.ucsb.edu/sites/default/files/2024-25%20Bren%20Graduate%20Student%20Handbook.docx.pdf){target="_blank"} and the [UCSB Code of Conduct](https://www.sa.ucsb.edu/docs/default-source/default-document-library/conduct-code-fall-2020_final.pdf?sfvrsn=fada724f_0){target="_blank"}
 
 <br>
 
 . . . 
 
-**Access & accommodations:** It's never too late to apply for [DSP accommodations](https://dsp.sa.ucsb.edu/accommodations/how-apply)
+**Access & accommodations:** It's never too late to apply for [DSP accommodations](https://dsp.sa.ucsb.edu/accommodations/how-apply){target="_blank"}
 
 <br>
 
 . . .
 
-**Names & pronouns:** Everyone has the right to be addressed and referred by to name and pronouns in accordance with their identity -- you can add your pronouns to your UCSB Registrar [profile](https://sso.my.ucsb.edu/adfs/ls/?wa=wsignin1.0&wtrealm=http%3a%2f%2fblue.sa.ucsb.edu%2fLanding%2f&wctx=rm%3d0%26id%3dpassive%26ru%3d%252fLanding%252fHomepage.aspx&wct=2023-08-09T18%3a30%3a46Z&rpsa-rn=5TFey%252fVSv9IF17J4Pn8osgH1LticIlQr%252blbEYGshM3OOsDWYP4J7emNKxAxFivBYQ9bjUpX68pv2TfPF1l10Gw%253d%253d&rpsa-an=AQYFW%252bAMuZU5NJ2X8VVjYJfEUAIzGOJ5TsVA9tf6taioBLLASrEwwwTwL3CfnBo0hlWxXzchkFxh%252frWqIlUAXA%253d%253d&rpsa-se=f5hRpBYXKP06s9Rp4Upm1RVnbN1guWDIEz%252bUg2%252fhCNeRJJGUTljXkJhT2q3Jc3CVoQo8gAKnlHeyxBa48wHcTA%253d%253d&rpsa-sedn=Ua%252fdFKWiVmSNkCOjsPoWPa%252bDhhvj5Uj6jpegUTzkSC8%253d) 
+**Names & pronouns:** Everyone has the right to be addressed and referred by to name and pronouns in accordance with their identity -- you can add your pronouns to your UCSB Registrar [profile](https://sso.my.ucsb.edu/adfs/ls/?wa=wsignin1.0&wtrealm=http%3a%2f%2fblue.sa.ucsb.edu%2fLanding%2f&wctx=rm%3d0%26id%3dpassive%26ru%3d%252fLanding%252fHomepage.aspx&wct=2023-08-09T18%3a30%3a46Z&rpsa-rn=5TFey%252fVSv9IF17J4Pn8osgH1LticIlQr%252blbEYGshM3OOsDWYP4J7emNKxAxFivBYQ9bjUpX68pv2TfPF1l10Gw%253d%253d&rpsa-an=AQYFW%252bAMuZU5NJ2X8VVjYJfEUAIzGOJ5TsVA9tf6taioBLLASrEwwwTwL3CfnBo0hlWxXzchkFxh%252frWqIlUAXA%253d%253d&rpsa-se=f5hRpBYXKP06s9Rp4Upm1RVnbN1guWDIEz%252bUg2%252fhCNeRJJGUTljXkJhT2q3Jc3CVoQo8gAKnlHeyxBa48wHcTA%253d%253d&rpsa-sedn=Ua%252fdFKWiVmSNkCOjsPoWPa%252bDhhvj5Uj6jpegUTzkSC8%253d){target="_blank"}
 
 ::: {.notes}
 Applying for DSP accommodations is a multi-step process and students should begin this as soon as possible as it can take 10 days to process applications. 
@@ -226,7 +226,7 @@ Step 2: For exam accommodations (more time, private setting, etc.) students need
 <hr>
 
 ::: {.center-text .body-text-m}
-**<https://eds-240-data-viz.github.io/>**
+**[https://eds-240-data-viz.github.io/](https://eds-240-data-viz.github.io/){target="_blank"}**
 :::
 
 ```{r}
@@ -238,7 +238,7 @@ knitr::include_graphics("images/week1/eds240-website.png")
 ```
 
 ::: {.body-text-m .center-text}
-Link is also bookmarked at the top of the **#eds-240-data-viz** Slack channel and linked on the [Courses page](https://ucsb-meds.github.io/courses.html) of the MEDS website.
+Link is also bookmarked at the top of the **#eds-240-data-viz** Slack channel and linked on the [Courses page](https://ucsb-meds.github.io/courses.html){target="_blank"} of the MEDS website.
 :::
 
 ---
@@ -261,7 +261,7 @@ Link is also bookmarked at the top of the **#eds-240-data-viz** Slack channel an
 | 3   | 1/20    | [*no class* ]{.teal-text}                                            |
 | 4   | 1/27    | fundamental chart types (part II)                                    |
 | 5   | 2/03    | enhancing visualizations (part I)                                    |
-| *5* | *2/07*  | *(optional) infographic design with Dr. Alex Phillips*  |
+| *5* | *2/07*  | *(optional) infographic design with Dr. Alex Phillips*               |
 | 6   | 2/10    | enhancing visualizations (part II)                                   |
 | 7   | 2/17    | [*no class* ]{.teal-text}                                            |
 | 8   | 2/24    | data storytelling, people as data                                    |
@@ -423,7 +423,7 @@ Traditional grading = points are awarded for correct answers on assessments; gra
 - **trade "tokens"** for the opportunity to:         
     - revise / resubmit assignments that receive a "Not Yet" mark (within a week)
     - assignment extensions (24 or 72 hours; max of 72 hours per assignment)
-    - to miss class (though see [sickness & emergency policy](https://docs.google.com/document/d/1ZALT0Ef9GQga5rkBAWJhzQ2npC4l-FkcNV4kMYFud0Q/edit?tab=t.0#heading=h.n2jxepxnwrym))
+    - to miss class (though see [sickness & emergency policy](https://docs.google.com/document/d/1ZALT0Ef9GQga5rkBAWJhzQ2npC4l-FkcNV4kMYFud0Q/edit?tab=t.0#heading=h.n2jxepxnwrym){target="_blank"})
 - **earn tokens** (primarily) by attending discussion section
 :::
 
@@ -525,7 +525,7 @@ knitr::include_graphics("images/week1/grade-tracker.png")
 . . .
 
 ::: {.center-text .body-text-l}
-**Please read the full policy on the [course syllabus](https://docs.google.com/document/d/1ZALT0Ef9GQga5rkBAWJhzQ2npC4l-FkcNV4kMYFud0Q/edit?tab=t.0)**
+**Please read the full policy on the [course syllabus](https://docs.google.com/document/d/1ZALT0Ef9GQga5rkBAWJhzQ2npC4l-FkcNV4kMYFud0Q/edit?tab=t.0){target="_blank"}**
 :::
 
 ---
@@ -536,7 +536,7 @@ knitr::include_graphics("images/week1/grade-tracker.png")
 
 <hr>
 
-Troubleshooting, deciphering code, and trying (and failing at) new things is a **large** part of being a data scientist. Grad school is a safe space to get comfy with and practice these! Here's how you should approach getting unstuck:
+Troubleshooting, deciphering code, and trying (and failing at) new things is a **large** part of being a data scientist. Grad school is a safe space to get comfy with and practice these!
 
 ```{r}
 #| eval: true
@@ -546,7 +546,7 @@ Troubleshooting, deciphering code, and trying (and failing at) new things is a *
 knitr::include_graphics("images/week1/getting-help-steps.png")
 ```
 
-Check out the [getting unstuck](https://samanthacsik.github.io/EDS-240-data-viz/getting-unstuck.html) page (under "resources") on the course website for more tips -- particularly a reminder of **how to ask a question.**
+Check out the [getting unstuck](../../getting-unstuck.qmd){target="_blank"} page (under "resources") on the course website for more tips -- particularly a reminder of **how to ask a question.**
 
 ---
 
@@ -591,7 +591,7 @@ knitr::include_graphics("images/week1/adventure-time.gif")
 ::::
 
 ::: {.body-text-s .gray-text .center-text}
-Slide adapted from [Andrew Heiss'](https://www.andrewheiss.com/) lesson, [Truth, beauty, and data](https://datavizs23.classes.andrewheiss.com/content/01-content.html) ([PMAP 8101: Data Visualization](https://datavizs23.classes.andrewheiss.com/))
+Slide adapted from [Andrew Heiss'](https://www.andrewheiss.com/){target="_blank"} lesson, [Truth, beauty, and data](https://datavizs23.classes.andrewheiss.com/content/01-content.html){target="_blank"} ([PMAP 8101: Data Visualization](https://datavizs23.classes.andrewheiss.com/){target="_blank"})
 :::
 
 ---
