working on 6.1 updates + key creation

--- a/resources.qmd
+++ b/resources.qmd
@@ -5,7 +5,7 @@ title-block-banner: true
 toc: true
 ---
 
-## Books
+## Books {#books}
 
 - **[Fundamentals of Data Visualization](https://clauswilke.com/dataviz/), by Claus O. Wilke** -- a primer on making informative and compelling figures
 - **[R for Data Science (2e)](https://r4ds.hadley.nz/), by Hadley Wickham, Mine Çetinkaya-Rundel, and Garrett Grolemund** -- an excellent primer on all things R for data wrangling, exploration, visualizing, and communicating, largely focused on using the `{tidyverse}`
@@ -15,15 +15,15 @@ toc: true
 - **[The Truthful Art: Data, Charts, and Maps for Communication](https://www.amazon.com/gp/product/0321934075/), by Albert Cairo** -- a guide to understanding information graphics and visualization (I have a hard copy in my office if you'd like to borrow it!)
 - **[A ggplot2 Tutorial for Beautiful Plotting in R](https://www.cedricscherer.com/2019/08/05/a-ggplot2-tutorial-for-beautiful-plotting-in-r/), by Cédric Scherer** -- a blog post that might as well be a book; an excellent introduction to many different ggplot options, ideas, and extension packages
 
-## Chart types
+## Chart types {#chart-types}
 
 - **[From Data to Viz](https://www.data-to-viz.com/), by Yan Holtz & Conor Healy** -- a decision tree for deciding which chart type is most appropriate for your data
 - **[Chart Suggestions -- A Thought-Starter](https://extremepresentation.typepad.com/files/choosing-a-good-chart-09.pdf), by A. Abela** -- a single pdf decision tree, which uses the four main chart types to guide users towards selecting an appropriate visualization
 - **[Data Viz Project](https://datavizproject.com/), by Ferdio (an infographic and data visualization agency in Copenhagen)** -- [100 different visualizations from one simple dataset](https://100.datavizproject.com/) 
 
-## Colors
+## Colors {#colors}
 
-### color theory & rules for data visualization
+### color theory & rules for data visualization {#color-theory}
 - **[Your Friendly Guide to Colors in Data Visualization](https://blog.datawrapper.de/colorguide/), by Lisa Charlotte Muth** -- a blog post on useful tools for deciding data viz color palettes
 - **[What to consider when choosing colors for data visualization](https://blog.datawrapper.de/colors/), by Lisa Charlotte Muth** -- a blog post with explanations and examples
 - **[Picking the right colors](https://www.storytellingwithdata.com/blog/2020/5/6/picking-the-right-colors), by Mike Cisneros** -- blog post on important considerations for choosing colors for your data visualization
@@ -31,7 +31,7 @@ toc: true
 - **[Colors and Emotions in Data Visualization](https://www.cedricscherer.com/2021/06/08/colors-and-emotions-in-data-visualization/), by Cédric Scherer** -- how colors influence our emotional response to data visualizations
 - **[Subtleties of Color](https://earthobservatory.nasa.gov/blogs/elegantfigures/2013/08/05/subtleties-of-color-part-1-of-6/), by Robert Simmon** -- a 6 part blog post series from NASA Earth Observatory about the use of color to map Earth observation data
 
-### color pickers & palette generators 
+### color pickers & palette generators {#color-palettes-pickers}
 - **[`{paletteer}`](https://github.com/EmilHvitfeldt/r-color-palettes)**: provides common functions for accessing a near comprehensive list of palettes; be sure to also check out the **[R Color Palettes](https://emilhvitfeldt.github.io/r-color-palettes/) website**, which includes previews of all palettes (clicking on one will reveal the `{paletteer}` code for using it or the associated HEX codes, along with example visualizations)
 - **[Google color picker](https://www.google.com/search?q=google+color+picker&sca_esv=598283965&ei=uVyjZdXpLtL3kPIPhdaOaA&ved=0ahUKEwiVqoat_9uDAxXSO0QIHQWrAw0Q4dUDCBA&uact=5&oq=google+color+picker&gs_lp=Egxnd3Mtd2l6LXNlcnAiE2dvb2dsZSBjb2xvciBwaWNrZXIyChAAGEcY1gQYsAMyChAAGEcY1gQYsAMyChAAGEcY1gQYsAMyChAAGEcY1gQYsAMyChAAGEcY1gQYsAMyChAAGEcY1gQYsAMyChAAGEcY1gQYsAMyChAAGEcY1gQYsAMyDRAAGIAEGIoFGEMYsAMyDRAuGIAEGIoFGEMYsANI6QRQAFgAcAF4AZABAJgBAKABAKoBALgBA8gBAOIDBBgAIEGIBgGQBgo&sclient=gws-wiz-serp)** -- a color picker
 - **[htmlcolorcodes.com](https://htmlcolorcodes.com/)** -- a color picker for HTML color codes, Hex color codes, RGB and HSL values
@@ -40,26 +40,26 @@ toc: true
 - **[Viz Palette](https://projects.susielu.com/viz-palette), by Elijah Meeks and Susie Lu** -- a tool that shows you how well your chosen colors work for tiny lines and big areas, warns if you have colors sharing the same name (which can make it more challenging to talk about your designs, say, in a presentation), and can simulate color vision deficiencies 
 - **[Shade Generator](https://www.shadegenerator.com/047C90)** -- a tool for generating shade scales
 
-### accessibility & colors
+### accessibility & colors {#accessibility-colors}
 - **[Colorblind Safe Color Schemes](https://www.nceas.ucsb.edu/sites/default/files/2022-06/Colorblind%20Safe%20Color%20Schemes.pdf), by the NCEAS Science Communication Resource Center** -- tips and examples of colorblind-friendly color palettes
 - **[Let's get color blind](https://chromewebstore.google.com/detail/lets-get-color-blind/bkdgdianpkfahpkmphgehigalpighjck)** -- Google Chrome extension for simulating color deficiencies in the web browser
 - **[Color review](https://color.review/), by Anton Robsarve** -- for understanding foreground and background contrasts
 - **[Color Contrast Checker](https://userway.org/contrast/?fg=000000&bg=ffffff), by Userway**: check your color contrast ratio, and view WCAG Compliance Results for different element types
 - **[Color Contrast Checker](https://coolors.co/contrast-checker/112a46-acc8e5), by coolors:** check your color contrast ratio, and use their enhancement tool to improve your colors
 
-## Typography
+## Typography {#typography}
 - **[Google Fonts](https://fonts.google.com/)** -- catalog of open-source fonts and icons, which can be imported for use with `{ggplot2}`; check out [this collection](https://fonts.google.com/knowledge/choosing_type) of short articles on choosing type
 - **[fontpair](https://www.fontpair.co/)** -- free fonts and font pairings
 - **[Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/), by Lisa Charlotte Muth**
 - **[Choosing Fonts for Your Data Visualization](https://nightingaledvs.com/choosing-fonts-for-your-data-visualization/), by Tiffany France**
 - **[Wake up & smell the fonts](https://www.youtube.com/watch?v=OXc-VZ4Vwbo), by Sarah Hyndman** -- a great 14min-long TEDx talk about how fonts turn words into stories that have the power to influence audience perceptions
 
-## Alternative (alt) text
+## Alternative (alt) text {#alt-text}
 - **[How to write good alternative descriptions for your data visualization](https://academy.datawrapper.de/article/330-how-to-write-good-alternative-descriptions-for-your-data-visualization), by Amy Cesal** -- great instructions (and examples) on how to construct informative alt text for data visualizations 
 - **[Writing Alt Text for Data Visualization](https://medium.com/nightingale/writing-alt-text-for-data-visualization-2a218ef43f81), also by Amy Cesal** -- more great example of alt text for data viz!
 - **[#TidyTuesday alt text instructions](https://github.com/rfordatascience/tidytuesday/blob/master/alt_text.md)** -- a simple formula for writing alt text for data visualizations, as recommended for #TidyTuesday participants
 
-## DEI in data visualization
+## DEI in data visualization {#dei-data-viz}
 
 - **[Do No Harm Guide: Applying Equity Awareness in Data Visualization](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf), by Jonathan Schwabish and Alice Feng** -- a guide for for approaching data work (and particularly visualizations) through a lens of diversity, equity, and inclusion 
 - **[Racial Equity GIS Hub](https://gis-for-racialequity.hub.arcgis.com/), by ESRI** -- an ongoing, continuously expanding resource hub to assist organizations working to address racial inequities; it includes data layers, maps, applications, training resources, articles on best practices, solutions, and examples of how Esri users from around the world are leveraging GIS to address racial inequities
@@ -67,41 +67,41 @@ toc: true
 - **[What to consider when choosing colors for race, ethnicity, and world regions](https://blog.datawrapper.de/colors-for-race-ethnicity-world-regions/), by Lisa Charlotte Muth (Datawrapper)** -- a blog post on choosing colors for visualizations with racial categories
 - **[An alternative to pink & blue: Colors for gender data](https://blog.datawrapper.de/gendercolor/), by Lisa Charlotte Muth (Datawrapper)** -- a blog post on avoiding gender stereotypes in your color choices
 
-## A mix of a cool miscellaneous resources
+## A mix of a cool miscellaneous resources {#misc}
 
-### podcasts
+### podcasts {#podcasts}
 
 - **[Data Stories](https://datastori.es/), hosted by Enrico Bertini and Moritz Stefaner** -- a podcast on data visualization; be sure to check out [episode 056: Amanda Cox on Working With R, NYT Projects, Favorite Data](https://datastori.es/ds-56-amanda-cox-nyt/) ([Amanda Cox](https://www.nytimes.com/2019/02/28/reader-center/data-visualization-editor-amanda-cox.html) was, for many years, the New York Times data editor)! 
 - **[Tidy Tuesday](https://www.tidytuesday.com/), hosted by Jon Harmon** -- a weekly (very short, ~5min-long) podcast that reviews a visualization (or a few) produced by community members using the latest published data set; Jon describes the visualization and describes a couple key geoms and / or functions the author used to create it
 - **[Data is Plural](https://podcast.data-is-plural.com/), hosted by Jeremy Singer-Vine** -- a new podcast from the long-running newsletter, [Data Is Plural](https://www.data-is-plural.com/), where each episode distills an expert interview into a crisp 15 minutes, taking you behind the scenes of another surprising data set
 
-### journals / articles
+### journals / articles {#journals-articles}
 
 - **[Nightingale: Journal of the Data Visualization Society](https://nightingaledvs.com/)** -- focuses on data visualization from personal stories to exploratory research to interviews with leaders in the community, data ethics, and best practices
 - Grainger S, Mao F, Buytaert W (2016) **Environmental data visualisation for non-scientific contexts: Literature review and design framework.** Environmental Modelling & Software. 85:299-318. <https://doi.org/10.1016/j.envsoft.2016.09.004>
 - Rougier NP, Droettboom M, Bourne PE (2014) **Ten Simple Rules for Better Figures.** PLOS Computational Biology. 10(9): e1003833. <https://doi.org/10.1371/journal.pcbi.1003833>
 
-### news / reporting outlets
+### news / reporting outlets {#news-reporting}
 
 - **[The Upshot](https://www.nytimes.com/section/upshot), by The New York Times** -- analysis that explains politics, policy and everyday life, with an emphasis on data and charts
 - **[Graphic Detail](https://www.economist.com/graphic-detail?page=1), by The Economist** -- a collection of graphics published by The Economist
 
-### videos
+### videos {#videos}
 - **[The Data Digest](https://www.youtube.com/@TheDataDigest)** -- a YouTube channel with *super* helpful, short videos on stats / data viz in R
 - **[Albert Rapp](https://www.youtube.com/user/Alfrodo123)** -- Albert's YouTube channel, with tons of great coding tutorials (including lots of ggplot)
 - **[TED Topics: Visualizations](https://www.ted.com/topics/visualizations)** -- a collection of TED talks (and more) on the topic of Visualizations
 
-### blogs / blog posts
+### blogs / blog posts {#blogs}
 - **[Climate Viz](https://blog.datawrapper.de/category/climate-data-vis/), by Datawrapper** -- a collection of blog posts on data visualizations created with [Datawrapper](https://www.datawrapper.de/) that help us (and hopefully you) to understand global warming and what humanity can do against it
 - **[Colors in Data Viz](https://blog.datawrapper.de/category/color-in-data-vis/), by Datawrapper** -- a collection of blog posts on choosing beautiful and appropriate colors for your charts and maps
 - **[Jazz up your ggplots!](https://waterdata.usgs.gov/blog/ggplot-jazz/), by Elmera Azadpour, Althea Archer, Hayler Corson-Dosch & Cee Nell at USGS** -- an awesome blog post with example USGS viz + code; stay up-to-date with cool data happenings at USGS in their [Water Data For The Nation Blog](https://waterdata.usgs.gov/blog/)
 
-### curated lists
+### curated lists {#curated-lists}
 - **[awesome-ggplot2](https://github.com/erikgahner/awesome-ggplot2), by Erik Gahner Larsen** -- a curated list of awesome ggplot2 tutorials, packages etc.
 
-## Inspirational data visualization creators
+## Inspirational data visualization creators {#inspiration}
 
-### `{ggplot2}` creators
+### `{ggplot2}` creators {#ggplot2-creators}
 
 (In my honest opinion) One of the best ways to learn how to build exciting ggplots is to look at code that others have written. Here are just a few folks doing really incredible work (along with their repos where they often showcase their creations): 
 
@@ -123,7 +123,7 @@ toc: true
 | [Tanya Shapiro](https://tanyaviz.com/) | [tanya-data-viz](https://github.com/tashapiro/tanya-data-viz) |
 | [Cara Thompson](https://www.cararthompson.com/index.html) | [tidytuesdays](https://github.com/cararthompson/tidytuesdays) |
 
-### Other seriously amazing data visualizationists 
+### Other seriously amazing data visualizationists {#other-data-viz-creators}
 
 Definitely don't limit yourself to just `{ggplot2}` creators! There are so many incredible data story-tellers and information designers to draw inspiration and learn from. Just a few:
 
@@ -135,36 +135,53 @@ Definitely don't limit yourself to just `{ggplot2}` creators! There are so many 
 - [Simon Scarr](https://www.simonscarr.com/)
 - [Kinga Stryszowska-Hill](https://stryszowskakinga9.wixsite.com/kingastryszowskahill) (who does use R / `{ggplot2}`, among other data visualization tools)
 
-## Data sources
+## Data sources {#data-sources}
 
 Data are *everywhere*, but that doesn't mean they're necessarily easy to track down. Here are some of the places I've found and used data from (or at least considered using data from). If you've found a cool data source (particularly if it's a source of environmental data), I would love to know! It can help me build out teaching materials with new / different examples, and also help your peers who may be searching for similar data. Please consider contributing data sources using [this Google Form](https://forms.gle/uYC7eEie1XZ7D4Xm6).
 
-### data repositories
+### data repositories {#data-repos}
 - **[DataOne](https://www.dataone.org/)** –  a repository of data repositories! Search across all member repositories (including repositories like [EDI Data Portal](https://portal.edirepository.org/nis/advancedSearch.jsp), [Arctic Data Center](https://arcticdata.io/catalog), [KNB](https://knb.ecoinformatics.org/), etc.) for environmental data (along with curated metadata records)
 - **[EDI Data Portal](https://portal.edirepository.org/nis/advancedSearch.jsp)** – contains environmental and ecological data and metadata derived from publicly funded research contributed by a number of participating organizations (e.g. EDI is the main repository for all [Long Term Ecological Research (LTER)](https://lternet.edu/) data)
 
-### newsletters / data collections 
-- **[ESIIL Data Library](https://cu-esiil.github.io/data-library/)** – The Environmental Data Science Innovation and Inclusion Lab (ESIIL) Data Library, which features a diverse range of datasets, each with its own dedicated web page
+### newsletters / data collections {#newsletters-data-collections}
+- **[ESIIL Data Library](https://cu-esiil.github.io/data-library/)** – The Environmental Data Science Innovation and Inclusion Lab (ESIIL) Data Library, which features a diverse range of data sets, each with its own dedicated web page
 - **[Data is Plural](https://www.data-is-plural.com/archive/)** – a weekly newsletter (and seasonal podcast) of useful / curious data sets, published by [Jeremy Singer-Vine](https://www.jsvine.com/)
 - **[tidytuesday](https://github.com/rfordatascience/tidytuesday)** – a weekly social data project that shares minimally-cleaned data sets covering a variety of topics for the [R4DS community](https://rfordatasci.com/) to visualize; organizers share links to the original data sources, as well as the scripts used to clean them prior to publishing
 - **[awesome-public-datasets](https://github.com/awesomedata/awesome-public-datasets)** – a repository containing a list of high quality, topic-centric public data sources 
 - **[Information is Beautiful](https://informationisbeautiful.net/data/)** -- Founded by [David McCandless](https://davidmccandless.com/), Information is Beautiful is dedicated to making sense of the world with graphics & data-visuals. We set out to explain, distill and clarify. All our visualizations are based on facts and data: constantly updated, revised and revisioned.
  - **[Kaggle Datasets](https://www.kaggle.com/datasets)** -- Kaggle is an online community for data scientists and machine learning practitioners to find and publish data, as well as enter competitions to solve data science challenges
 
-### government agencies
-- **[Centers for Disease Control and Prevention (CDC)](https://www.cdc.gov/datastatistics/index.html)** – there are tons of data sets buried in the pages of this website (you'll likely have to do a bit of digging)
+### government agencies {#gov-agencies}
+- **[Centers for Disease Control and Prevention (CDC)](https://data.cdc.gov/)** – there are tons of data sets buried in the pages of this website (you'll likely have to do a bit of digging)
 - **[Data.gov](https://catalog.data.gov/organization/)** – view data sets by the federal agency, state, city, or county that publishes them
 - **[EPA's National Emissions Inventory (NEI) Data Retrieval Tool](https://awsedap.epa.gov/public/single/?appid=20230c40-026d-494e-903f-3f112761a208&sheet=5d3fdda7-14bc-4284-a9bb-cfd856b9348d&opt=ctxmenu,currsel)** – read more about NEI Data on the [EPA's website](https://www.epa.gov/air-emissions-inventories/2020-national-emissions-inventory-nei-data)
 - **[NOAA's National Centers for Environmental Information](https://www.ncei.noaa.gov/)** – specifically, check out their [Climate Monitoring Products](https://www.ncei.noaa.gov/access/monitoring/products/) (I used the [County Mapping](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202310/1/value) interface to download precipitation data featured in [Lecture 5.3](https://samanthacsik.github.io/EDS-240-data-viz/slides/week5.3-choropleth.html#/title-slide)'s choropleth map)
 - **[`{tidycensus}` package](https://walker-data.com/tidycensus/)** – tooling that allows R users to more easily interface with a select number of the [US Census Bureau](https://www.census.gov/)'s data APIs and return tidyverse-ready data frames
 
-## Learning communities
+## Learning communities {#learning-communities}
 
-### online communities 
+### online communities {#online-communities}
 
 - **[TidyTuesday](https://github.com/rfordatascience/tidytuesday), by the R4DS Online Learning Community** -- a weekly data project in R, and an *excellent* (dare I say, *the best*) way to practice your data wrangling & visualization skills
-
-### local communities
+- **[Bluesky](https://bsky.app/)** -- a decentralized social media service that's quickly becoming *the* Twitter replacement(!) for data science community members (especially R users) to connect, learn, share resources, and more. Some tips on getting started: 
+  1. Sign up at <https://bsky.app/>
+  2. Explore some "starter packs" to find and connect with folks doing cool data viz / data science work. I recommend checking out the following (but note that you can explore all available starter packs in the [Bluesky Directory](https://blueskydirectory.com/starter-packs/all) -- as of 11/18/2024, there are over 51,000!)
+      - [RStats Starter Pack](https://bsky.app/starter-pack/did:plc:yktvw5fpe6j4rqy4vio7l3w3/3l6x3agttsg2r)
+      - [rOpenSci](https://bsky.app/starter-pack/noamross.net/3land3z3fez2z)
+      - [R-Ladies Starter Pack](https://bsky.app/starter-pack-short/Vgxwa2F)
+      - [Data People Starter Pack](https://bsky.app/starter-pack-short/8TdEfdK)
+      - [Earth Observation & remote sensing](https://bsky.app/starter-pack-short/4PMRhNL)
+      - [Climate Science & Research Orgs](https://bsky.app/starter-pack-short/5kuYAhM)
+  3. Filter content using popular hashtags, like 
+      - [#TidyTuesday](https://bsky.app/hashtag/TidyTuesday)
+      - [#rstats](https://bsky.app/hashtag/RStats)
+      - [#DataViz](https://bsky.app/hashtag/DataViz)
+      - [#RLadies](https://bsky.app/hashtag/rladies)
+      - [#tidyverse](https://bsky.app/hashtag/tidyverse)
+      - [#r4ds](https://bsky.app/hashtag/r4ds)
+      - [#PyData](https://bsky.app/hashtag/PyData)
+  
+### local communities {#local-communities}
 
 The following Santa Barbara-based groups hold regular meetups, workshops, networking events, and more:
 
