--- a/course-materials/lecture-slides/lecture6.1-typography-slides.qmd
+++ b/course-materials/lecture-slides/lecture6.1-typography-slides.qmd
@@ -19,7 +19,7 @@ editor_options:
 
 <hr class="hr-teal">
 
-[Week 6 | February 12^th^, 2024]{.custom-subtitle3}
+[Week 6 | February 10^th^, 2025]{.custom-subtitle3}
 
 ---
 
@@ -39,7 +39,7 @@ editor_options:
 - **color choices** (incl. palette types, emotions, readability)
 - [how to **tell an interesting story**]{.gray-text}
 - [how to **center the people and communities** represented in your data]{.gray-text}
-- [**accessibility** through colorblind-friendly palettes & alt text (see [week 2 discussion](https://samanthacsik.github.io/EDS-240-data-viz/course-materials/week2.html#discussion-materials))]{.gray-text}
+- [**accessibility** through colorblind-friendly palettes & alt text]{.gray-text}
 
 
 ::: {.center-text .teal-text}
@@ -66,7 +66,7 @@ editor_options:
 
 ::: {.column width="50%"}
 
-**[Typeface](https://fonts.google.com/knowledge/glossary/typeface) (aka font family)**: underlying visual design (e.g. Times New Roman, Helvetica, Roboto)
+**[Typeface](https://fonts.google.com/knowledge/glossary/typeface){target="_blank"} (aka font family)**: underlying visual design (e.g. Times New Roman, Helvetica, Roboto)
 
 ```{r}
 #| eval: true
@@ -79,7 +79,7 @@ knitr::include_graphics("images/week6/nunito-type.png")
 
 ::: {.column width="50%"}
 
-**[Font](https://fonts.google.com/knowledge/glossary/font)**: an implementation of a typeface; they can come in different weights and styles (e.g. bold, italic)
+**[Font](https://fonts.google.com/knowledge/glossary/font){target="_blank"}**: an implementation of a typeface; they can come in different weights and styles (e.g. bold, italic)
 
 ```{r}
 #| eval: true
@@ -97,7 +97,7 @@ knitr::include_graphics("images/week6/nunito-fonts.png")
 :::: {.columns}
 
 ::: {.column width="50%" .center-text}
-**You choose a *typeface* (e.g. [Nunito](https://fonts.google.com/specimen/Nunito?query=nunito))**
+**You choose a *typeface* (e.g. [Nunito](https://fonts.google.com/specimen/Nunito?query=nunito){target="_blank"})**
 :::
 
 ::: {.column width="50%" .center-text}
@@ -136,24 +136,24 @@ knitr::include_graphics("images/week6/psychology-fonts.png")
 > *"Typography is the art and technique of arranging type to make written language legible, readable and appealing when displayed."*
 
 ::: {.right-align-text .body-text-s}
--[Wikipedia](https://en.wikipedia.org/wiki/Typography)
+-[Wikipedia](https://en.wikipedia.org/wiki/Typography){target="_blank"}
 :::
 
 <br>
 
 
-Similar to colors, typefaces / fonts influence the how viewers perceive information (check out this short [TEDx talk](https://www.youtube.com/watch?v=OXc-VZ4Vwbo)).
+Similar to colors, typefaces / fonts influence the how viewers perceive information (check out this short [TEDx talk](https://www.youtube.com/watch?v=OXc-VZ4Vwbo){target="_blank"}).
 
 <br>
 
-[{{< fa arrow-left title="an arrow pointing to the left" >}} Source: [The Daily Egg](https://www.crazyegg.com/blog/psychology-of-fonts-infographic/)]{.body-text-s .gray-text}
+[{{< fa arrow-left title="an arrow pointing to the left" >}} Source: [The Daily Egg](https://www.crazyegg.com/blog/psychology-of-fonts-infographic/){target="_blank"}]{.body-text-s .gray-text}
 
 :::
 
 ::::
 
 ::: {.footer}
-Want to dive deeper into the world of typography? Start with this quick read, [Why care about typography?](https://fonts.google.com/knowledge/introducing_type/why_care_about_typography) and explore other great articles by [Google Fonts](https://fonts.google.com/knowledge).
+Want to dive deeper into the world of typography? Start with this quick read, [Why care about typography?](https://fonts.google.com/knowledge/introducing_type/why_care_about_typography){target="_blank"} and explore other great articles by [Google Fonts](https://fonts.google.com/knowledge){target="_blank"}.
 :::
 
 ---
@@ -177,13 +177,13 @@ knitr::include_graphics("images/week6/find-you.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Source: [Typography for a better user experience](https://www.suvoray.com/notes/typography-for-a-better-user-experience), by [Suvo Ray](https://www.suvoray.com/)
+Source: [Typography for a better user experience](https://www.suvoray.com/notes/typography-for-a-better-user-experience){target="_blank"}, by [Suvo Ray](https://www.suvoray.com/){target="_blank"}
 :::
 
 <br>
 
 ::: {.footer}
-Interested in font pyschology? Check out this [short video](https://www.youtube.com/watch?v=6Jlo9iOZvXY&t=65s) and [this article](https://designmodo.com/font-psychology/#:~:text=Serif%20fonts%20can%20evoke%20feelings,modernity%2C%20simplicity%2C%20and%20clarity.) to learn a bit more.
+Interested in font psychology? Check out this [short video](https://www.youtube.com/watch?v=6Jlo9iOZvXY&t=65s){target="_blank"} and [this article](https://designmodo.com/font-psychology/#:~:text=Serif%20fonts%20can%20evoke%20feelings,modernity%2C%20simplicity%2C%20and%20clarity.){target="_blank"} to learn a bit more.
 :::
 
 ---
@@ -212,7 +212,7 @@ knitr::include_graphics("images/week6/sans-vs-serif-fonts.png")
 
 ::: {.column width="50%" .incremental}
 - **Sans-serif** fonts = **cleaner** and easier to read.
-  - [[Roboto](https://fonts.google.com/specimen/Roboto), [Lato](https://fonts.google.com/specimen/Lato), [Open Sans](https://fonts.google.com/specimen/Open+Sans) are good, free options]{.body-text-s}
+  - [[Roboto](https://fonts.google.com/specimen/Roboto){target="_blank"}, [Lato](https://fonts.google.com/specimen/Lato){target="_blank"}, [Open Sans](https://fonts.google.com/specimen/Open+Sans){target="_blank"} are good, free options]{.body-text-s}
 - **Serif** fonts = classy / traditional / professional / serious tone; typically only used for **visualization headlines**
   - [If your organization uses a serif font, consider using it in your visualization's headline]{.body-text-s}
 :::
@@ -222,8 +222,8 @@ knitr::include_graphics("images/week6/sans-vs-serif-fonts.png")
 <br>
 
 ::: {.footer}
-*Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/), by 
-Lisa Charlotte Muth*
+Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/){target="_blank"}, by 
+Lisa Charlotte Muth
 :::
 
 ---
@@ -249,8 +249,8 @@ knitr::include_graphics("images/week6/lining.png")
 ```
 
 ::: {.footer}
-*Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/), by 
-Lisa Charlotte Muth*
+Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/){target="_blank"}, by 
+Lisa Charlotte Muth
 :::
 
 ---
@@ -292,8 +292,8 @@ knitr::include_graphics("images/week6/tabular-google.svg")
 ::::
 
 ::: {.footer}
-*Examples from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/), by 
-Lisa Charlotte Muth* & [Understanding numerals](https://fonts.google.com/knowledge/introducing_type/understanding_numerals#when-to-use-tabular-lining-numerals) article by Google Fonts
+Examples from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/){target="_blank"}, by 
+Lisa Charlotte Muth & [Understanding numerals](https://fonts.google.com/knowledge/introducing_type/understanding_numerals#when-to-use-tabular-lining-numerals){target="_blank"} article by Google Fonts
 :::
 
 ---
@@ -323,8 +323,8 @@ knitr::include_graphics("images/week6/symbols.png")
 Consider special characters for different languages, currency symbols, math symbols, reference marks, sub / superscript numbers, etc.
 
 ::: {.footer}
-*Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/), by 
-Lisa Charlotte Muth*
+Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/){target="_blank"}, by 
+Lisa Charlotte Muth
 :::
 
 ---
@@ -352,8 +352,8 @@ knitr::include_graphics("images/week6/bold.png")
 <br>
 
 ::: {.footer}
-*Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/), by 
-Lisa Charlotte Muth*
+Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/){target="_blank"}, by 
+Lisa Charlotte Muth
 :::
 
 ---
@@ -364,7 +364,7 @@ Lisa Charlotte Muth*
 
 <hr>
 
-Thin (light-weight fonts) fonts are hard to read. **Only use them in a high-contrast color and in large sizes** (often, titles are the only place you'll want to use think fonts.)
+Thin (light-weight fonts) fonts are hard to read. **Only use them in a high-contrast color and in large sizes** (e.g. for titles).
 
 <br>
 
@@ -379,8 +379,8 @@ knitr::include_graphics("images/week6/thin.png")
 <br>
 
 ::: {.footer}
-*Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/), by 
-Lisa Charlotte Muth*
+Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/){target="_blank"}, by 
+Lisa Charlotte Muth
 :::
 
 ---
@@ -406,8 +406,8 @@ knitr::include_graphics("images/week6/large-enough-text.png")
 <br>
 
 ::: {.footer}
-*Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/), by 
-Lisa Charlotte Muth*
+Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/){target="_blank"}, by 
+Lisa Charlotte Muth
 :::
 
 ---
@@ -418,7 +418,7 @@ Lisa Charlotte Muth*
 
 <hr>
 
-[[Web Content Accessibility Guidelines](https://www.w3.org/TR/WCAG21/#:~:text=Web%20Content%20Accessibility%20Guidelines%20(WCAG)%202.1%20defines%20how%20to%20make,%2C%20learning%2C%20and%20neurological%20disabilities.) (WCAG) recommends **a minimum contrast ratio of 4.5:1** -- use a color contrast checker to check your ratio. This particular **[color contrast checker](https://coolors.co/contrast-checker/112a46-acc8e5)** will enhance poor color combinations to meet WCAG guidelines. For example, here is a color combo with a [bad contrast ratio](https://coolors.co/contrast-checker/5cdc8d-ffffff), and here is the updated color combo with an [improved contrast ratio](https://coolors.co/contrast-checker/104c27-ffffff).]{.body-text-s}
+[[Web Content Accessibility Guidelines](https://www.w3.org/TR/WCAG21/#:~:text=Web%20Content%20Accessibility%20Guidelines%20(WCAG)%202.1%20defines%20how%20to%20make,%2C%20learning%2C%20and%20neurological%20disabilities.){target="_blank"} (WCAG) recommends **a minimum contrast ratio of 4.5:1** -- use a color contrast checker to check your ratio. This particular **[color contrast checker](https://coolors.co/contrast-checker/112a46-acc8e5){target="_blank"}** will enhance poor color combinations to meet WCAG guidelines. For example, here is a color combo with a [bad contrast ratio](https://coolors.co/contrast-checker/5cdc8d-ffffff){target="_blank"}, and here is the updated color combo with an [improved contrast ratio](https://coolors.co/contrast-checker/104c27-ffffff){target="_blank"}.]{.body-text-s}
 
 <br>
 
@@ -433,8 +433,8 @@ knitr::include_graphics("images/week6/contrast-ratio.png")
 <br>
 
 ::: {.footer}
-*Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/), by 
-Lisa Charlotte Muth*
+Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/){target="_blank"}, by 
+Lisa Charlotte Muth
 :::
 
 ---
@@ -445,8 +445,8 @@ Lisa Charlotte Muth*
 
 <hr>
 
-Uppercase text is more difficult to read compared to sentence case -- **limit use to headlines or labels**. Region labels on maps are commonly uppercase (e.g. see maps in these New York Times pieces, [How to Think About Ukraine, in Maps and Charts](https://www.nytimes.com/interactive/2022/02/25/opinion/russia-ukraine-invasion-maps.html) and [Closing the Back
-Door to Europe](https://www.nytimes.com/interactive/2015/09/15/world/europe/migrant-borders-europe.html)).
+Uppercase text is more difficult to read compared to sentence case -- **limit use to headlines or labels**. Region labels on maps are commonly uppercase (e.g. see maps in these New York Times pieces, [How to Think About Ukraine, in Maps and Charts](https://www.nytimes.com/interactive/2022/02/25/opinion/russia-ukraine-invasion-maps.html){target="_blank"} and [Closing the Back
+Door to Europe](https://www.nytimes.com/interactive/2015/09/15/world/europe/migrant-borders-europe.html){target="_blank"}).
 
 ```{r}
 #| eval: true
@@ -459,8 +459,8 @@ knitr::include_graphics("images/week6/uppercase.png")
 <br>
 
 ::: {.footer}
-*Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/), by 
-Lisa Charlotte Muth*
+Example from [Which fonts to use for your charts and tables](https://blog.datawrapper.de/fonts-for-data-visualization/){target="_blank"}, by 
+Lisa Charlotte Muth
 :::
 
 ---
@@ -486,7 +486,7 @@ knitr::include_graphics("images/week6/hierarchy.png")
 <br>
 
 ::: {.center-text .gray-text .body-text-s}
-Source: [The UX Designer’s Guide to Typography](https://www.interaction-design.org/literature/article/the-ux-designer-s-guide-to-typography)
+Source: [The UX Designer’s Guide to Typography](https://www.interaction-design.org/literature/article/the-ux-designer-s-guide-to-typography){target="_blank"}
 :::
 
 ---
@@ -516,13 +516,13 @@ Source: [The UX Designer’s Guide to Typography](https://www.interaction-design
 :::
 
 ::: {.center-text}
-**Check out [fontpair.co](https://www.fontpair.co/) to explore aesthetically-pleasing font pairings!**
+**Check out [fontpair.co](https://www.fontpair.co/){target="_blank"} to explore aesthetically-pleasing font pairings!**
 :::
 
 . . . 
 
 ::: {.footer}
-There are *lots* of excellent resources out there for choosing the right typeface / font check out the [resources page](https://samanthacsik.github.io/EDS-240-data-viz/resources.html#typography) on the course website for some recommendations.
+There are *lots* of excellent resources out there for choosing the right typeface / font -- check out the [resources page](../../resources.qmd#typography){target="_blank"} on the course website for some recommendations.
 :::
 
 ---
@@ -538,7 +538,7 @@ knitr::include_graphics("images/week6/nicault-horror.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Horror Movies, by [Cristophe Nicault](https://www.christophenicault.com/) ([source code](https://github.com/cnicault/tidytuesday/blob/master/2022/2022-44-horror-movies/horror_movies.qmd))
+Horror Movies, by [Cristophe Nicault](https://www.christophenicault.com/){target="_blank"} ([source code](https://github.com/cnicault/tidytuesday/blob/master/2022/2022-44-horror-movies/horror_movies.qmd){target="_blank"})
 :::
 
 
@@ -571,7 +571,7 @@ knitr::include_graphics("images/week6/anyene-hbcu.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-HBCUs, by [Ijeamaka Anyene](https://ijeamaka-anyene.netlify.app/) ([source code](https://github.com/Ijeamakaanyene/tidytuesday/blob/master/scripts/2021_04_hbcu.Rmd))
+HBCUs, by [Ijeamaka Anyene](https://ijeamaka-anyene.netlify.app/){target="_blank"} ([source code](https://github.com/Ijeamakaanyene/tidytuesday/blob/master/scripts/2021_04_hbcu.Rmd){target="_blank"})
 :::
 
 
@@ -604,7 +604,7 @@ knitr::include_graphics("images/week6/rennie-rladies.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-R-Ladies Chapter Events, by [Nicola Rennie](https://ijeamaka-anyene.netlify.app/) ([source code](https://github.com/nrennie/tidytuesday/tree/main/2023/2023-11-21)) | Font inspired by [R-Ladies Global](https://rladies.org/)
+R-Ladies Chapter Events, by [Nicola Rennie](https://ijeamaka-anyene.netlify.app/){target="_blank"} ([source code](https://github.com/nrennie/tidytuesday/tree/main/2023/2023-11-21){target="_blank"}) | Font inspired by [R-Ladies Global](https://rladies.org/){target="_blank"}
 :::
 
 
@@ -640,7 +640,7 @@ countdown::countdown(
 
 <hr>
 
-A **[[system font](https://fonts.google.com/knowledge/glossary/system_font_web_safe_font)]{.teal-text} is one that's already assumed to be on the vast majority of users' devices**, with no need for a web font to be downloaded.
+A **[[system font](https://fonts.google.com/knowledge/glossary/system_font_web_safe_font){target="_blank"}]{.teal-text} is one that's already assumed to be on the vast majority of users' devices**, with no need for a web font to be downloaded.
 
 . . . 
 
@@ -659,8 +659,8 @@ ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
   geom_point() + 
   labs(title = "This title is serif font",
        subtitle = "This subtitle is mono font",
-       x = "This axis label is sans font (default)",
-       y = "This axis is also sans font (default)") +
+       x = "This axis label is sans font\n(default)",
+       y = "This axis is also sans font\n(default)") +
   theme(
     plot.title = element_text(family = "serif", size = 30),
     plot.subtitle = element_text(family = "mono", size = 25),
@@ -694,7 +694,7 @@ ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
 **Unfortunately, text drawing is handled differently by each graphics device**, which means that if we want a font to work everywhere, we need to configure all these different devices in different ways.
 
 ::: {.footer}
-Read a bit more about graphics devices in [Chapter 8](https://bookdown.org/rdpeng/exdata/graphics-devices.html) of [Exploratory Data Analysis with R](https://bookdown.org/rdpeng/exdata/), by [Roger Peng](https://rdpeng.org/)
+Read a bit more about graphics devices in [Chapter 8](https://bookdown.org/rdpeng/exdata/graphics-devices.html){target="_blank"} of [Exploratory Data Analysis with R](https://bookdown.org/rdpeng/exdata/), by [Roger Peng](https://rdpeng.org/){target="_blank"}
 :::
 
 ---
@@ -707,8 +707,8 @@ Read a bit more about graphics devices in [Chapter 8](https://bookdown.org/rdpen
 
 Fortunately, there are a couple super handy packages that make working with fonts relatively painless:
 
-- [`{showtext}`](https://github.com/yixuan/showtext) 
-- [`{extrafont}`](https://github.com/wch/extrafont)
+- [`{showtext}`](https://github.com/yixuan/showtext){target="_blank"} 
+- [`{extrafont}`](https://github.com/wch/extrafont){target="_blank"}
 
 <br>
 
@@ -727,11 +727,11 @@ knitr::include_graphics("images/week6/showtext.png")
 ::: {.column width="50%"}
 <br>
 
-[**We'll be using `{showtext}`** for a couple reasons: it supports more file formats *and* more graphics devices, and it also avoids using external software (`{extrafont}` requires that you install some additional software and packages first). `{showtext}` makes is *super* easy to import and use [Google Fonts](https://fonts.google.com/).]{.body-text-s}
+[**We'll be using `{showtext}`** for a couple reasons: it supports more file formats *and* more graphics devices, and it also avoids using external software (`{extrafont}` requires that you install some additional software and packages first). `{showtext}` makes is *super* easy to import and use [Google Fonts](https://fonts.google.com/){target="_blank"}.]{.body-text-s}
 :::
 
 ::: {.footer}
-[Albert Rapp](https://albert-rapp.de/posts/ggplot2-tips/08_fonts_and_icons/08_fonts_and_icons.html) and [Nicola Rennie](https://nrennie.rbind.io/blog/adding-social-media-icons-ggplot2/) both have written great blog posts on using `{showtext}`. These materials draw from both their work!
+[Albert Rapp](https://albert-rapp.de/posts/ggplot2-tips/08_fonts_and_icons/08_fonts_and_icons.html){target="_blank"} and [Nicola Rennie](https://nrennie.rbind.io/blog/adding-social-media-icons-ggplot2/){target="_blank"} both have written great blog posts on using `{showtext}`. These materials draw from both their work!
 :::
 
 ::::
@@ -766,7 +766,7 @@ knitr::include_graphics("images/week6/earnings-plot.png")
 
 <hr>
 
-This code should look familiar (copied from [Lecture 4.1](https://samanthacsik.github.io/EDS-240-data-viz/slides/week4.1-rankings-slides.html#/title-slide)):
+This code should look familiar (copied from [Lecture 4.1](lecture4.1-rankings-slides.qmd){target="_blank"}):
 ```{r}
 #| eval: true
 #| echo: true
@@ -819,17 +819,19 @@ jobs_clean <- jobs |>
 #....guarantee the same random samples each time we run code.....
 set.seed(0)
 
-#.........get 10 random jobs that are 75%+ female (2016).........
+#...............get random samples from each group...............
+
+# 10 random jobs that are 75%+ female (2016) ----
 f75 <- jobs_clean |>
   filter(year == 2016, group_label == "Occupations that are 75%+ female") |>
   slice_sample(n = 10)
 
-#..........get 10 random jobs that are 75%+ male (2016)..........
+# 10 random jobs that are 75%+ male (2016) ----
 m75 <- jobs_clean |>
   filter(year == 2016, group_label == "Occupations that are 75%+ male") |>
   slice_sample(n = 10)
 
-#........get 10 random jobs that are 45-55%+ female (2016).......
+# 10 random jobs that are 45-55%+ female (2016) ----
 f50 <- jobs_clean |>
   filter(year == 2016, group_label == "Occupations that are 45-55% female") |>
   slice_sample(n = 10)
@@ -851,7 +853,7 @@ subset_jobs <- rbind(f75, m75, f50) |>
 
 <hr>
 
-This code was copied from [Lecture 4.1](https://samanthacsik.github.io/EDS-240-data-viz/slides/week4.1-rankings-slides.html#/title-slide). Resulting plot is rendered on the next slide!
+This code was copied from [Lecture 4.1](lecture4.1-rankings-slides.qmd){target="_blank"}. Resulting plot is rendered on the next slide!
 
 <br>
 
@@ -906,7 +908,7 @@ plot
 
 <hr>
 
-[In last week's [lecture on colors](https://samanthacsik.github.io/EDS-240-data-viz/slides/week5.2-colors-slides.html#/title-slide), we learned **to be predictable in our color choices, but to avoid stereotypes** ([Muth 2018](https://blog.datawrapper.de/colors/)). It can be helpful for readers to choose a cool color for men (e.g. blues / purples) and warmer color for women (e.g. yellows, oranges, warm greens).]{.body-text-s}
+[In last week's [lecture on colors](lecture5.2-colors-slides.qmd){target="_blank"}, we learned **to be predictable in our color choices, but to avoid stereotypes** ([Muth 2018](https://blog.datawrapper.de/colors/){target="_blank"}). It can be helpful for readers to choose a cool color for men (e.g. blues / purples) and warmer color for women (e.g. yellows, oranges, warm greens).]{.body-text-s}
 
 [We'll do that here, but this time, **let's create a named vector of colors** to call from. In addition to our point colors, we'll also include colors for our plot's text:]{.body-text-s}
 
@@ -919,7 +921,7 @@ earnings_pal <- c("males" = "#2D7787",
                   light_text = "#4E514D") 
 ```
 
-[The primary purpose of the [`{monochromeR}` package](https://github.com/cararthompson/monochromeR) is for creating monochrome colour palettes, however, it also includes a **helpful function for viewing our palette**:]{.body-text-s}
+[The primary purpose of the [`{monochromeR}` package](https://github.com/cararthompson/monochromeR){target="_blank"} is for creating monochrome colour palettes, however, it also includes a **helpful function for viewing our palette**:]{.body-text-s}
 
 ```{r}
 #| eval: true
@@ -1045,7 +1047,7 @@ plot +
 
 <hr>
 
-[Browse typefaces and fonts at <https://fonts.google.com/>. It can be helpful to type your desired text into the **Preview** field (you may need to expand the sidebar by clicking the **Filters** button on the top left of the page) to get a better sense of how your font choice will look. You can also search typefaces by name:]{.body-text-s}
+[Browse typefaces and fonts at [https://fonts.google.com/](https://fonts.google.com/){target="_blank"}. It can be helpful to type your desired text into the **Preview** field (you may need to expand the sidebar by clicking the **Filters** button on the top left of the page) to get a better sense of how your font choice will look. You can also search typefaces by name:]{.body-text-s}
 
 ```{r}
 #| eval: true
@@ -1070,7 +1072,7 @@ knitr::include_graphics("images/week6/google-fonts.gif")
 ::: {.column width="50%"}
 
 ::: {.center-text}
-**[Josefin Sans](https://fonts.google.com/specimen/Josefin+Sans)**
+**[Josefin Sans](https://fonts.google.com/specimen/Josefin+Sans){target="_blank"}**
 :::
 
 ```{r}
@@ -1085,7 +1087,7 @@ knitr::include_graphics("images/week6/josefin-sans.png")
 ::: {.column width="50%"}
 
 ::: {.center-text}
-**[Sen](https://fonts.google.com/specimen/Sen?query=sen)**
+**[Sen](https://fonts.google.com/specimen/Sen?query=sen){target="_blank"}**
 :::
 
 ```{r}
@@ -1106,8 +1108,6 @@ knitr::include_graphics("images/week6/sen.png")
 [Import Google Fonts]{.slide-title}
 
 <hr>
-
-<!-- [We'll use the [`{showtext}` package](https://github.com/yixuan/showtext) to import and apply our Google Fonts. -->
 
 [Import `{showtext}` at the top of your script, then use `font_add_google()` to specify the font family(ies) you want to import. **Importantly**, you'll also need to "turn on" showtext using `showtext_auto()` -- this enables showtext font rendering for any newly opened graphics devices.]{.body-text-s} 
 
@@ -1232,7 +1232,7 @@ plot +
 
 <hr>
 
-[[Font Awesome](https://fontawesome.com/) is a library of icons, which can be imported and used similar to Google Fonts. You'll need to download the font files first (see week 5 [pre-class prep instructions](https://samanthacsik.github.io/EDS-240-data-viz/course-materials/week6.html#download-font-awesome-fonts)). We can then use `showtext::font_add()` to make them available for use in our ggplots:]{.body-text-s}
+[[Font Awesome](https://fontawesome.com/){target="_blank"} is a library of icons, which can be imported and used similar to Google Fonts. You'll need to download the font files first (see today's [pre-class prep instructions](../week6.qmd#pre-class-prep){target="_blank"}). We can then use `showtext::font_add()` to make them available for use in our ggplots:]{.body-text-s}
 
 ```{r}
 #| eval: true
@@ -1272,7 +1272,7 @@ showtext_auto()
 
 <hr>
 
-Let's say I want to include my GitHub username along with the GitHub icon in the caption of my plot. Start by searching the [**Free** icons on Font Awesome](https://fontawesome.com/search?o=r&m=free) and click on the one you want to use (here, the [**github**](https://fontawesome.com/icons/github?f=brands&s=solid) icon). Find the icon's Unicode in the top right corner of the popup box:
+Let's say I want to include my GitHub username along with the GitHub icon in the caption of my plot. Start by searching the [**Free** icons on Font Awesome](https://fontawesome.com/search?o=r&m=free){target="_blank"} and click on the one you want to use (here, the [**github**](https://fontawesome.com/icons/github?f=brands&s=solid){target="_blank"} icon). Find the icon's Unicode in the top right corner of the popup box:
 
 ```{r}
 #| eval: true
@@ -1314,13 +1314,13 @@ caption <- glue::glue(
 
 ---
 
-## {#create-subtitle data-menu-title="FA unicode (subtitle)"} 
+## {#create-subtitle data-menu-title="FA unicode (subtitle)"}
 
 [Let's also add an icon to our subtitle]{.slide-title}
 
 <hr>
 
-We can do this the same way that we constructed our caption -- **note** that this money icon is from the [`fa-regular` family](https://fontawesome.com/icons/money-bill-1?f=classic&s=regular) (though you could choose to use the [solid version](https://fontawesome.com/icons/money-bill-1?f=classic&s=solid) as well):
+We can do this the same way that we constructed our caption -- **note** that this money icon is from the [`fa-regular` family](https://fontawesome.com/icons/money-bill-1?f=classic&s=regular){target="_blank"} (though you could choose to use the [solid version](https://fontawesome.com/icons/money-bill-1?f=classic&s=solid){target="_blank"} as well):
 
 <br>
 
@@ -1330,16 +1330,15 @@ We can do this the same way that we constructed our caption -- **note** that thi
 #........................create subtitle.........................
 money_icon <- "&#xf3d1"
 
-subtitle <- glue::glue("Median earnings 
-                       <span style='font-family:fa-regular;'>{money_icon};</span>
-                       of full-time male versus female workers by occupation in 2016")
+subtitle <- glue::glue("<span style='font-family:fa-regular;'>{money_icon};</span>
+                       Median earnings of full-time male versus female workers by occupation in 2016")
 ```
 
 ---
 
 ## {#update-plot-text data-menu-title="Add new plot text"} 
 
-[Apply our new subtitle & caption]{.slide-title}
+[Apply our new caption & subtitle]{.slide-title}
 
 <hr>
 
@@ -1429,7 +1428,7 @@ plot +
 
 <br>
 
-. . . but the [`{ggtext}` package](https://wilkelab.org/ggtext/) does! If we want to render ggplot text using HTML or Markdown syntax, **we *also* need to use one of `{ggtext}`'s [`theme()` elements](https://wilkelab.org/ggtext/articles/theme_elements.html)**, which will parse and render the applied styles. 
+. . . but the [`{ggtext}` package](https://wilkelab.org/ggtext/){target="_blank"} does! If we want to render ggplot text using HTML or Markdown syntax, **we *also* need to use one of `{ggtext}`'s [`theme()` elements](https://wilkelab.org/ggtext/articles/theme_elements.html){target="_blank"}**, which will parse and render the applied styles. 
 
 <br>
 
@@ -1484,6 +1483,10 @@ plot +
   )
 ```
 
+::: {.footer}
+**Tip:** highlight your updated plot code, then use the keyboard shortcut `Command / Ctrl` + `I` to realign your code!
+:::
+
 ---
 
 ## {#update-theme-elements-viz data-menu-title="Update theme elements (viz)"} 
@@ -1534,7 +1537,7 @@ plot +
 
 <hr>
 
-Traditional legends are fine, but for this plot, we'll opt to **color-code our subtitle text (i.e. [male]{style="color:#2D7787"} & [female]{style="color:#FC6B4B"}) to match the points in our plot**. We can again use the [`{ggtext}` package](https://wilkelab.org/ggtext/) to apply simple Markdown and HTML rendering to our ggplot text.
+Rather than a traditional legend, let's **color-code our subtitle text (i.e. [male]{style="color:#2D7787"} & [female]{style="color:#FC6B4B"}) to match the points in our plot**. We can again use the [`{ggtext}` package](https://wilkelab.org/ggtext/){target="_blank"} to apply simple Markdown and HTML rendering to our ggplot text.
 
 <br>
 
@@ -1542,18 +1545,19 @@ Traditional legends are fine, but for this plot, we'll opt to **color-code our s
 
 We already have the correct `theme()` elements added to our plot, but we do need to **update our subtitle text with Markdown and HTML styling**. Let's bold, color, and make these words slightly larger than the surrounding text:
 
-<br>
-
 ```{r}
 #| eval: true
 #| echo: true
+#| code-line-numbers: "7,9"
 #........................create subtitle.........................
 money_icon <- "&#xf3d1"
 
-subtitle <- glue::glue("Median earnings <span style='font-family:fa-regular;'>{money_icon};</span>
+subtitle <- glue::glue("Median earnings 
+                       <span style='font-family:fa-regular;'>{money_icon};</span>
                        of full-time
-                       <span style='color:#2D7787;font-size:20pt;'>**male**</span>
-                       versus <span style='color:#FC6B4B;font-size:20pt;'>**female**</span>
+                       <span style='color:#2D7787;font-size:20pt;'>**male**</span> 
+                       versus 
+                       <span style='color:#FC6B4B;font-size:20pt;'>**female**</span>
                        workers by occupation in 2016")
 ```
 
@@ -1682,7 +1686,7 @@ plot +
 
 <hr>
 
-Getting your fonts / plots to look just right when writing to a file device can be a bit tricky. Check out [Understanding text size and resolution in ggplot2](https://www.christophenicault.com/post/understand_size_dimension_ggplot2/), by [Christophe Nicault](https://www.christophenicault.com/) to understand why and for solutions on how to fix / avoid this.
+Getting your fonts / plots to look just right when writing to a file device can be a bit tricky. Check out [Understanding text size and resolution in ggplot2](https://www.christophenicault.com/post/understand_size_dimension_ggplot2/){target="_blank"}, by [Christophe Nicault](https://www.christophenicault.com/){target="_blank"} to understand why and for solutions on how to fix / avoid this.
 
 <br>
 
