--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -57,7 +57,7 @@ knitr::include_graphics(here::here("images", "horst-ggplot-masterpiece.png"))
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
-| [Lecture 6.1: typography](lecture-slides/lecture6.1-typography-slides.qmd){target="_blank"}  | [6.1 template](){target="_blank"} | [6.2 key](){target="_blank"} |
+| [Lecture 6.1: typography](lecture-slides/lecture6.1-typography-slides.qmd){target="_blank"}  | [6.1 template](){target="_blank"} | [6.1 key](keys/KEY-lecture6.1-typography.qmd){target="_blank"} |
 | [Lecture 6.2: annotations](lecture-slides/lecture6.2-annotations-slides.qmd){target="_blank"} | [6.2 template](){target="_blank"} | [6.2 key](){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
@@ -70,6 +70,11 @@ knitr::include_graphics(here::here("images", "horst-ggplot-masterpiece.png"))
 <!-- ::: {.center-text} -->
 <!-- [{{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Week 6 discussion slides](https://docs.google.com/presentation/d/10tk6XawtK0GD-XU4VCkupTOBK4tFW0JamKUeufiqlL0/edit#slide=id.p){.btn role="button" target="_blank"}  -->
 <!-- ::: -->
+
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
+|-------------------|-------------------|--------------|
+| [D5 slides: "advanced" graphic forms](discussion/week4/week5-slides.qmd) | *NA* | *NA* |
+: {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
